<resources>
    <string name="app_name">BookKeeper</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="not_saved">Not Saved</string>
    <string name="save">Save</string>
    <string name="author">Author</string>
    <string name="book">Book</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel">cancel</string>
    <string name="search">Search</string>
    <string name="updated">Book Updated</string>
    <string name="deleted">Book Deleted</string>
    <string name="description">Description</string>
    <string name="last_updated">Last Updated</string>
</resources>